# recursive-agent-improvement

./: AGENTS.md  LICENSE  README.md  SKILL.md
.agents/skills/recursive-agent-improvement/: SKILL.md
.agents/skills/recursive-agent-improvement/assets/pytorch-training-pipeline/docs/: TOOL_CONTRACT.md
.agents/skills/recursive-agent-improvement/assets/pytorch-training-pipeline/scripts/: README.md
.agents/skills/recursive-agent-improvement/assets/pytorch-training-pipeline/tools/: README.md
assets/pytorch-training-pipeline/: .gitignore  Makefile  README.md  SKILL_TEMPLATE.md  pyproject.toml
assets/pytorch-training-pipeline/artifacts/: README.md
assets/pytorch-training-pipeline/configs/: defaults.yaml  search_space.yaml
assets/pytorch-training-pipeline/data/: README.md
assets/pytorch-training-pipeline/docs/: DATASET_CARD.md  MODEL_CARD.md  TASK_SPEC.md
assets/pytorch-training-pipeline/src/: README.md
assets/pytorch-training-pipeline/tests/: README.md
templates/pytorch-training-pipeline/: README.md  SKILL_TEMPLATE.md
templates/pytorch-training-pipeline/configs/: data.yaml
templates/pytorch-training-pipeline/docs/: EVAL_PLAN.md
templates/pytorch-training-pipeline/templates/: SKILL_TEMPLATE.md
